--- a/my second website/styles/blog.css
+++ b/my second website/styles/blog.css
@@ -1,8 +1,13 @@
 div{
     background-color: tomato;
     padding: 10px;
+    margin-bottom: 10px;
 }
 h3{
     text-align: center;
     text-shadow: 10px;
+}
+h4{
+    text-align: center;
+
 }
